[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"
description = "A collection of Advent of Code coding puzzle solutions"
repository = "https://github.com/jrmoynihan/advent-of-code"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
