[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"
description = "A collection of Advent of Code coding puzzle solutions"
repository = "https://github.com/jrmoynihan/advent-of-code"
license = "MIT OR Apache-2.0"

[lib]
bench = false

[dependencies]
anyhow = "1.0.93"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
divan = "0.1.16"
glam = "0.29.2"
itertools = "0.13.0"
miette = { version = "7.4.0", features = ["fancy"] }
nom = "7.1.3"
nom_locate = "4.2.0"
rayon = "1.10.0"
rstest = "0.23.0"
thiserror = "2.0.3"
tracing = "0.1.41"
